mynode/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "node-app"
  namespace: "develop"
  annotations:
    kubernetes.io/ingress.class: alb
    external-dns.alpha.kubernetes.io/hostname: node.srinadella.com
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:625031190962:certificate/886e23ad-a8cf-4d2e-a41b-1c5187ba3831
  labels:
    app: node-app
spec:
  rules:
  - host: node.srinadella.com
    http:
      paths:
      - backend:
          serviceName: node-service
          servicePort: 3000
